feat: :rocket: docker-compose
docker-compose and .env ready

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
-MONGO_HOST = "" 
-MONGO_PORT = ""
-MONGO_DB   = ""
-MONGO_USER = ""
-MONGO_PASS = ""
+DB_CONNECTION_COMPOSE=
+DB_CONNECTION_REMOTE=
+DB_CONNECTION=
+MONGO_HOST = 
+MONGO_PORT =
+MONGO_DB   =
+MONGO_USER =
+MONGO_PASS =
+
+MONGO_INITDB_ROOT_USERNAME=
+MONGO_INITDB_ROOT_PASSWORD=
+MONGO_INITDB_DATABASE=
+API_PORT=
