--- a/requirements.txt
+++ b/requirements.txt
@@ -1,48 +1,35 @@
 annotated-types==0.7.0
-anyio==4.6.0
+anyio==4.6.2.post1
 certifi==2024.8.30
 click==8.1.7
-contourpy==1.3.0
-cycler==0.12.1
 dnspython==2.7.0
 email_validator==2.2.0
-fastapi==0.115.0
+fastapi==0.115.2
 fastapi-cli==0.0.5
-fonttools==4.54.1
 h11==0.14.0
 httpcore==1.0.6
-httptools==0.6.1
+httptools==0.6.4
 httpx==0.27.2
 idna==3.10
 Jinja2==3.1.4
-kiwisolver==1.4.7
 markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.9.2
+MarkupSafe==3.0.2
 mdurl==0.1.2
-numpy==2.1.2
-packaging==24.1
-pandas==2.2.3
-pillow==10.4.0
 pydantic==2.9.2
+pydantic-settings==2.6.1
 pydantic_core==2.23.4
 Pygments==2.18.0
 pymongo==4.10.1
-pyparsing==3.1.4
-python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.12
-pytz==2024.2
 PyYAML==6.0.2
 rich==13.9.2
 shellingham==1.5.4
-six==1.16.0
 sniffio==1.3.1
-starlette==0.38.6
+starlette==0.40.0
 typer==0.12.5
 typing_extensions==4.12.2
-tzdata==2024.2
-uvicorn==0.31.0
-uvloop==0.20.0
+uvicorn==0.32.0
+uvloop==0.21.0
 watchfiles==0.24.0
 websockets==13.1
